--- a/app/templates/tutorview.html
+++ b/app/templates/tutorview.html
@@ -10,54 +10,68 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-            
+        <!-- Custom CSS Module -->
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">       
         <title>Dashboard</title>
         <style>
             body {
-                background-color: #F5F5DC; 
-            }.dark-btn{
-                background-color: #716e6b; 
-                border-color: #817f7e;
-                color: white;
-            }.dark-btn:hover{
-                background-color:#817f7e;
-                color:#716e6b;
-                border-color:  #faf9f8;
-            }
-            .warm-btn {
-                background-color: #F4A460; 
-                border-color: #DEB887;
-                color: white;
-            }
-            .warm-btn:hover {
-                background-color: #DEB887; 
-                border-color: #F4A460; 
-            }
-            .centered {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                height: 100vh;
-            }.custombg-warm{
-                background-color: #f37820;
-            }.card {
-                margin-top: 10px;
-            }.time-slot {
-                width: calc(100% / 5 - 10px); 
-                margin: 5px;
-                padding: 10px 0;
-                border: 1px solid #ccc;
-            }
+            background-color: #F5F5DC; 
+        }
+
+        .dark-btn{
+            background-color: #716e6b; 
+            border-color: #817f7e;
+            color: white;
+        }.dark-btn:hover{
+            background-color:#817f7e;
+            color:#716e6b;
+            border-color:  #faf9f8;
+        }
+
+        .warm-btn {
+            background-color: #F4A460; 
+            border-color: #DEB887;
+            color: white;
+        }
+
+        .warm-btn:hover {
+            background-color: #DEB887; 
+            border-color: #F4A460; 
+        }
+
+        .centered {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        .custombg-warm{
+            background-color: #f37820;
+        }
+
+        .card {
+            margin-top: 10px;
+        }
+
+        .time-slot {
+            width: calc(100% / 5 - 10px); 
+            margin: 5px;
+            padding: 10px 0;
+            border: 1px solid #ccc;
+        }
+
         </style>
     </head>
 
     <body>
         {% include 'header.html' with context %}
         
-        <div class="container" >
+        <div class="container-fluid" >
             You have the following appoinments for this week: 
 
             <!-- Current Appointments Block -->
