--- a/app/templates/tutorview.html
+++ b/app/templates/tutorview.html
@@ -49,7 +49,6 @@
             justify-content: center;
             height: 100vh;
         }
-
         .custombg-warm{
             background-color: #f37820;
         }
@@ -64,12 +63,16 @@
             padding: 10px 0;
             border: 1px solid #ccc;
         }
+        
+        .tutor-column {
+            width: 20%; 
+        }
 
         </style>
     </head>
 
     <body>
-        {% include 'header.html' with context %}
+        {% include 'headerDynamic.html' with context %}
         
         <div class="container-fluid" >
             You have the following appoinments for this week: 
@@ -81,14 +84,12 @@
                   Current Appointments
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item">
-                    3/25 9:30pm, rweasly
-                    <a href="#" class="btn warm-btn float-end">Edit/Cancel</a>
-                  </li>
-                  <li class="list-group-item">
-                    3/30 2:00pm, hgranger
-                    <a href="#" class="btn warm-btn float-end">Edit/Cancel</a>
-                  </li>
+                    {% for date, time, netid in apt_tutor %}
+                    <li class="list-group-item">
+                        {{ date }} {{ time }} with {{ netid }}
+                        <a href="#" class="btn warm-btn float-end">Edit/Cancel</a>
+                    </li>
+                    {% endfor %}
                 </ul>
               </div>
             </div>
@@ -96,58 +97,32 @@
         
         <h2 class="h2">Schedule</h2>
 
-        <table class="col-md-6" border="1">
+        {% for date, tutors in appointments_by_date.items() %}
+        <table class="col-md-8" border="1">
             <thead>
-                <tr><strong> Friday, March 22 </strong></tr>
                 <tr>
-                    <th>Tutor</th>
+                    <th colspan="3">{{ date.strftime('%A, %B %d, %Y') }}</th>
+                </tr>
+                <tr>
+                    <th class="tutor-column">Tutor</th>
                     <th>Times Available</th>
                 </tr>
-                <tr>
-                    <td>
-                        Dumbledore
-                    </td>
-                    <td>
-                        <button class="btn warm-btn time-slot">3:00 pm</button> <button class="btn warm-btn btn-block time-slot">4:00 pm</button>
-                         <button class="btn warm-btn  time-slot">9:00 pm</button> <button class="btn dark-btn btn-block time-slot">9:30 pm</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Snape
-                    </td>
-                    <td>
-                        <button class="btn warm-btn btn-block time-slot">11:00 am</button> <button class="btn dark-btn btn-block time-slot">3:30 pm</button>
-                        <button class="btn warm-btn btn-block time-slot">6:00 pm</button> 
-                    </td>
-                </tr>
             </thead>
-            </tr>
-        </table>
-    <br>
-        <table class="col-md-6" border="1">
-            <thead>
+            <tbody>
+                {% for tutor, appointments in tutors.items() %}
                     <tr>
-                        <strong> Saturday, March 23 </strong>
+                        <td>{{ tutor }}</td>
+                        <td>
+                            {% for appointment in appointments  %}
+                                <button class="btn time-slot {{ 'dark-btn' if appointment[1] else 'warm-btn' }}">{{ appointment[0] }}</button>
+                            {% endfor %}
+                        </td>
                     </tr>
-                </tr>
-                <tr>
-                    <th> Tutor </th>
-                    <th>Times Available</td>
-                </tr>
-                <tr>
-                    <td>
-                        Dumbledore
-                    </td>
-                    <td>
-                        <button class="btn warm-btn btn-block time-slot">10:00 am</button> 
-                        <button class="btn warm-btn btn-block time-slot">3:30 pm</button> 
-                        <button class="btn warm-btn btn-block time-slot">8:00 pm</button>
-
-                    </td>
-            </thead>
+                {% endfor %}
+            </tbody>
         </table>
-    </div>
+        <br> 
+    {% endfor %}
     {% include 'footer.html' with context %}
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     </body>
