--- a/app/templates/tutorview.html
+++ b/app/templates/tutorview.html
@@ -93,37 +93,14 @@
                 </ul>
               </div>
             </div>
-        <hr>
+            
+            <hr>
         
-        <h2 class="h2">Schedule</h2>
+            {% include 'schedule.html' with context %}
 
-        {% for date, tutors in appointments_by_date.items() %}
-        <table class="col-md-8" border="1">
-            <thead>
-                <tr>
-                    <th colspan="3">{{ date.strftime('%A, %B %d, %Y') }}</th>
-                </tr>
-                <tr>
-                    <th class="tutor-column">Tutor</th>
-                    <th>Times Available</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for tutor, appointments in tutors.items() %}
-                    <tr>
-                        <td>{{ tutor }}</td>
-                        <td>
-                            {% for appointment in appointments  %}
-                                <button class="btn time-slot {{ 'dark-btn' if appointment[1] else 'warm-btn' }}">{{ appointment[0] }}</button>
-                            {% endfor %}
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <br> 
-    {% endfor %}
-    {% include 'footer.html' with context %}
+        </div>
+    
+        {% include 'footer.html' with context %}
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
