--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -17,7 +17,7 @@
                 <td>{{ tutor }}</td>
                 <td>
                     {% for appointment in appointments  %}
-                        <button class="btn time-slot {{ 'dark-btn' if appointment[1] else 'warm-btn' }}">{{ appointment[0] }}</button>
+                        <button class="btn time-slot {{ 'dark-btn' if appointment[1] else 'warm-btn' }}" onclick="window.location.href='{{ url_for( 'appointment_page', tutor_netid=tutor, date=date, time=appointment[0] ) }}'">{{ appointment[0] }}</button>
                     {% endfor %}
                 </td>
             </tr>
