--- a/app/templates/appointment_page.html
+++ b/app/templates/appointment_page.html
@@ -8,6 +8,64 @@
 
 <html>
  
-{{appointment.to_tuple()}}
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <!-- Custom CSS Module -->
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">       
+        <title>Appointment</title>
+        <style>
+            body {
+            background-color: #F5F5DC; 
+        }
+        </style>
+    </head>
+
+    <body>
+        {% include 'headerDynamic.html' with context %}
+        
+        <div class="container-fluid" >
+        <h2>Appointment Details ({{"Unavailable" if appointment.booked else "Available"}}):</h2>
+
+        <form action="" method="post">
+
+            <label for="time">Appointment Time:</label>
+            <br>
+            <input type="text" name="time" value="{{appointment.get_time()}}" disabled>
+            <br>
+            
+            <label for="tutor_name">Tutor Name:</label>
+            <br>
+            <input type="text" name="tutor_name" value="{{tutor.get_name()}}" disabled>
+            <br>
+            
+            <label for="student_name">Student Name:</label>
+            <br>
+            <input type="text" name="student_name" value="{{student.get_name() if student else ''}}" disabled>
+            <br>
+
+            <label for="comments">Comments for Appointment:</label>
+            <br>
+            {% if user_type != "student" or student %}
+                <input type="textarea" name="comments" value="{{appointment.get_comments()}}" disabled>
+            {% else %}
+                <input type="textarea" name="comments">  
+            {% endif %}
+            <br>
+
+            {% if user_type == "student" and not appointment.booked %}
+            <input type="submit" value="Submit">
+            {% endif %}
+
+            <br>
+
+            <a href="{{url_for(user[1]+'view')}}">Go back to dashboard</a>
+        </form>
+
+        <!DOCTYPE html>
 
 </html>
