Tutor overview and weekly summary are working

--- a/app/templates/adminview.html
+++ b/app/templates/adminview.html
@@ -89,8 +89,8 @@
                     </div>
                     <ul class="list-group list-group-flush">
                     <li class="list-group-item">
-                        <a href="#" class="btn warm-btn float-left">View Weekly Summary</a>
-                        <a href="#" class="btn warm-btn float-right">View Tutor Overview</a>
+                        <a href="{{url_for('weekly_summary')}}" class="btn warm-btn float-left">View Weekly Summary</a>
+                        <a href="{{url_for('tutor_overview')}}" class="btn warm-btn float-right">View Tutor Overview</a>
                     </li>
                     <li class="list-group-item">
                         <a href="#" class="btn warm-btn float-left">Add Students</a>
