--- a/app/templates/appointment_page.html
+++ b/app/templates/appointment_page.html
@@ -63,7 +63,7 @@
 
             <br>
 
-            <a href="{{url_for(user[1]+'view')}}">Go back to dashboard</a>
+            <hr><a href="{{url_for(user[1]+'view')}}">Go back to dashboard</a>
         </form>
 
         <!DOCTYPE html>
