--- a/app/templates/tutorview.html
+++ b/app/templates/tutorview.html
@@ -22,7 +22,7 @@
         {% include 'headerDynamic.html' with context %}
         
         <div class="container-fluid" >
-            You have the following appoinments for this week: 
+            You have the following appointments for this week: 
 
             <!-- Current Appointments Block -->
             <div class="col-md-6">
