--- a/app/templates/appointment_page.html
+++ b/app/templates/appointment_page.html
@@ -29,7 +29,7 @@
         {% include 'headerDynamic.html' with context %}
         
         <div class="container-fluid" >
-        <h2>Appointment Details ({{"Unavailable" if appointment.get_booked() else "Available"}}):</h2>
+        <h2>Appointment Details ({{"Booked" if appointment.get_booked() else "Not Booked"}}):</h2>
 
         <form action="" method="post">
 
